--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,45 +2,43 @@ name: Update GitHub Profile Assets
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch: 
 
 jobs:
-  update-readme:
+  update-assets:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Fetch GitHub Stats
+      - name: Generate Snake Contribution Grid
+        uses: Platane/snk@master
+        with:
+          github_user_name: OskaraOskar
+          outputs: github-contribution-grid-snake.svg
+
+      - name: Fetch 3D Contribution Graph
+        run: |
+          curl -o profile-3d-contrib.svg "https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=OskaraOskar&theme=tokyonight"
+
+      - name: Fetch Random Dev Quote
+        run: |
+          curl -o github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
+
+      - name: Fetch GitHub Stats (Including Private Repos)
         env:
           GH_STATS_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
         run: |
           curl -o github-stats.svg "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&theme=tokyonight&hide=stars&include_all_commits=true&count_private=true&token=${GH_STATS_TOKEN}"
           curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=tokyonight&langs_count=8&count_private=true&token=${GH_STATS_TOKEN}"
-          curl -o streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true"
-
-      - name: Generate Snake Contribution Grid
-        uses: Platane/snk@master
-        with:
-          github_user_name: OskaraOskar
-          outputs: dist/github-contribution-grid-snake.svg
-
-      - name: Fetch Random Quote
-        run: |
-          curl -o github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
-
-      - name: Upload assets
-        uses: actions/upload-artifact@v3
-        with:
-          name: profile-assets
-          path: dist/
+          curl -o streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true&token=${GH_STATS_TOKEN}"
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add github-stats.svg top-langs.svg streak-stats.svg github-contribution-grid-snake.svg github-quote.svg
-          git commit -m "Update GitHub Profile Assets [Automated]"
-          git push
+          git add github-contribution-grid-snake.svg profile-3d-contrib.svg github-quote.svg github-stats.svg top-langs.svg streak-stats.svg
+          git commit -m "Update GitHub Profile Assets [Automated]" || echo "No changes to commit"
+          git push || echo "No changes to push"
