--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,11 +2,12 @@ name: Update GitHub Profile Assets
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch: 
+    - cron: '* */12 * * *'  # Runs every 12 hours
+  workflow_dispatch:
 
 jobs:
-  update-assets:
+  build:
+    name: Jobs to update profile assets
     runs-on: ubuntu-latest
 
     steps:
@@ -15,9 +16,18 @@ jobs:
 
       - name: Generate Snake Contribution Grid
         uses: Platane/snk@master
+        id: snake-gif
         with:
           github_user_name: OskaraOskar
-          outputs: github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - name: Deploy Snake Contribution Grid to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Fetch 3D Contribution Graph
         run: |
@@ -27,6 +37,7 @@ jobs:
         run: |
           curl -o github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
 
+      # Fetch GitHub Stats (Including Private Repos)
       - name: Fetch GitHub Stats (Including Private Repos)
         env:
           GH_STATS_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
@@ -35,10 +46,11 @@ jobs:
           curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=tokyonight&langs_count=8&count_private=true&token=${GH_STATS_TOKEN}"
           curl -o streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true&token=${GH_STATS_TOKEN}"
 
+      # Commit and Push Changes
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add github-contribution-grid-snake.svg profile-3d-contrib.svg github-quote.svg github-stats.svg top-langs.svg streak-stats.svg
+          git add github-contribution-grid-snake.svg profile-3d-contrib.svg github-quote.svg github-stats.svg top-langs.svg streak-stats.svg || echo "No changes to add"
           git commit -m "Update GitHub Profile Assets [Automated]" || echo "No changes to commit"
           git push || echo "No changes to push"
