--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -27,30 +27,28 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
 
       - name: Fetch 3D Contribution Graph
         run: |
-          curl -o profile-3d-contrib.svg "https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=OskaraOskar&theme=tokyonight"
+          curl -o dist/profile-3d-contrib.svg "https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=OskaraOskar&theme=tokyonight"
 
       - name: Fetch Random Dev Quote
         run: |
-          curl -o github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
+          curl -o dist/github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
 
-      # Fetch GitHub Stats (Including Private Repos)
       - name: Fetch GitHub Stats (Including Private Repos)
         env:
           GH_STATS_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
         run: |
-          curl -o github-stats.svg "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&theme=tokyonight&hide=stars&include_all_commits=true&count_private=true&token=${GH_STATS_TOKEN}"
-          curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=tokyonight&langs_count=8&count_private=true&token=${GH_STATS_TOKEN}"
-          curl -o streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true&token=${GH_STATS_TOKEN}"
+          curl -o dist/github-stats.svg "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&theme=tokyonight&hide=stars&include_all_commits=true&count_private=true&token=${GH_STATS_TOKEN}"
+          curl -o dist/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=tokyonight&langs_count=8&count_private=true&token=${GH_STATS_TOKEN}"
+          curl -o dist/streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true&token=${GH_STATS_TOKEN}"
 
-      # Commit and Push Changes
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add github-contribution-grid-snake.svg profile-3d-contrib.svg github-quote.svg github-stats.svg top-langs.svg streak-stats.svg || echo "No changes to add"
+          git add dist/github-contribution-grid-snake.svg dist/profile-3d-contrib.svg dist/github-quote.svg dist/github-stats.svg dist/top-langs.svg dist/streak-stats.svg || echo "No changes to add"
           git commit -m "Update GitHub Profile Assets [Automated]" || echo "No changes to commit"
           git push || echo "No changes to push"
