--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,54 +1,67 @@
-name: Update GitHub Profile Assets
+name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: '* */12 * * *'  # Runs every 12 hours
-  workflow_dispatch:
+    - cron: "0 */6 * * *"  # Runs every 6 hours
+  push:
+    branches:
+      - main
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
-  build:
-    name: Jobs to update profile assets
+  update-readme:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake Contribution Grid
-        uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: OskaraOskar
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - name: Deploy Snake Contribution Grid to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
-
-      - name: Fetch 3D Contribution Graph
+      - name: Fetch GitHub Contribution Data
         run: |
-          curl -o dist/profile-3d-contrib.svg "https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=OskaraOskar&theme=tokyonight"
+          RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GH_STATS_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/users/OskaraOskar)
 
-      - name: Fetch Random Dev Quote
-        run: |
-          curl -o dist/github-quote.svg "https://quotes-github-readme.vercel.app/api?type=horizontal&theme=tokyonight"
+          PRIVATE_CONTRIBS=$(curl -s -H "Authorization: token ${{ secrets.GH_STATS_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/user \
+            | jq '.total_private_repos')
 
-      - name: Fetch GitHub Stats (Including Private Repos)
-        env:
-          GH_STATS_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
+          PUBLIC_CONTRIBS=$(echo $RESPONSE | jq '.public_repos')
+          FOLLOWERS=$(echo $RESPONSE | jq '.followers')
+
+          # Handle API failures
+          if [[ -z "$PRIVATE_CONTRIBS" ]]; then PRIVATE_CONTRIBS="N/A"; fi
+          if [[ -z "$PUBLIC_CONTRIBS" ]]; then PUBLIC_CONTRIBS="N/A"; fi
+          if [[ -z "$FOLLOWERS" ]]; then FOLLOWERS="N/A"; fi
+
+          echo "PRIVATE_CONTRIBS=$PRIVATE_CONTRIBS" >> $GITHUB_ENV
+          echo "PUBLIC_CONTRIBS=$PUBLIC_CONTRIBS" >> $GITHUB_ENV
+          echo "FOLLOWERS=$FOLLOWERS" >> $GITHUB_ENV
+
+      - name: Generate SVG Stats
         run: |
-          curl -o dist/github-stats.svg "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&theme=tokyonight&hide=stars&include_all_commits=true&count_private=true&token=${GH_STATS_TOKEN}"
-          curl -o dist/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=tokyonight&langs_count=8&count_private=true&token=${GH_STATS_TOKEN}"
-          curl -o dist/streak-stats.svg "https://streak-stats.demolab.com?user=OskaraOskar&theme=tokyonight&count_private=true&token=${GH_STATS_TOKEN}"
+          echo '<svg width="500" height="250" xmlns="http://www.w3.org/2000/svg">
+          <text x="10" y="30" font-size="20" fill="white">📊 GitHub Activity Stats</text>
+          <text x="10" y="70" font-size="18" fill="cyan">👥 Followers: '"${FOLLOWERS}"'</text>
+          <text x="10" y="100" font-size="18" fill="green">🗂 Public Repos: '"${PUBLIC_CONTRIBS}"'</text>
+          <text x="10" y="130" font-size="18" fill="orange">🔒 Private Contributions: '"${PRIVATE_CONTRIBS}"'</text>
+          <text x="10" y="180" font-size="12" fill="gray">Last updated: '"$(date -u)"' UTC</text>
+          </svg>' > dist/github-stats.svg
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add dist/github-contribution-grid-snake.svg dist/profile-3d-contrib.svg dist/github-quote.svg dist/github-stats.svg dist/top-langs.svg dist/streak-stats.svg || echo "No changes to add"
-          git commit -m "Update GitHub Profile Assets [Automated]" || echo "No changes to commit"
+          git config --global user.email "github-actions@github.com"
+          git add dist/github-stats.svg
+          git commit -m "Auto-update GitHub stats" || echo "No changes to commit"
           git push || echo "No changes to push"
+
+      - name: Fallback: Update with GitHub Readme Stats
+        if: failure()
+        run: |
+          echo "Primary update failed. Falling back to Readme Stats API"
+          curl -s "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&count_private=true&theme=radical" -o dist/github-stats.svg
+
+          git add dist/github-stats.svg
+          git commit -m "Fallback update via Readme Stats"
+          git push || echo "No fallback changes to push"
