--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -56,7 +56,7 @@ jobs:
           git commit -m "Auto-update GitHub stats" || echo "No changes to commit"
           git push || echo "No changes to push"
 
-      - name: Fallback: Update with GitHub Readme Stats
+      - name: Fallback Update with GitHub Readme Stats
         if: failure()
         run: |
           echo "Primary update failed. Falling back to Readme Stats API"
