refactor(workflow): split GitHub Metrics job into parallel steps for performance
- Extracted classic, repository, and terminal metrics into individual jobs
- Added upload/download-artifact for shared deploy
- Improved overall runtime and modularity
- Updated deploy logic to use `dist/` folder

--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -2,13 +2,13 @@ name: Generate README Assets
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Daily at midnight UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
   push:
     branches: ["master", "main"]
 
 permissions:
-  contents: write # Needed to commit generated files
+  contents: write
 
 jobs:
   generate-snake:
@@ -35,11 +35,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  generate-metrics:
-    name: Generate GitHub Metrics
+  classic-metrics:
+    name: Generate Classic GitHub Metrics
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    timeout-minutes: 10
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -50,30 +49,39 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: OskaraOskar
           template: classic
+          filename: dist/github-metrics.svg
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Stockholm
-
           plugin_introduction: yes
           plugin_introduction_title: yes
-
           plugin_activity: yes
           plugin_activity_limit: 5
           plugin_activity_days: 14
           plugin_activity_visibility: all
           plugin_activity_timestamps: yes
-
           plugin_calendar: yes
           plugin_calendar_limit: 1
-
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
-
-          # Adjusted skyline plugin to avoid rendering errors
           plugin_skyline: yes
           plugin_skyline_year: current-year
           plugin_skyline_frames: 24
           plugin_skyline_quality: 0.3
           plugin_skyline_compatibility: yes
+
+      - name: Upload Classic Metrics Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: classic-metrics
+          path: dist/github-metrics.svg
+
+  repository-metrics:
+    name: Generate Repository Metrics
+    runs-on: ubuntu-latest
+    needs: classic-metrics
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Generate Repository Metrics
         uses: lowlighter/metrics@latest
@@ -81,11 +89,25 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: OskaraOskar
           template: repository
-          filename: metrics.repository.svg
+          filename: dist/metrics.repository.svg
           query: |
             {
               "repository": "OskaraOskar"
             }
+
+      - name: Upload Repository Metrics Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: repository-metrics
+          path: dist/metrics.repository.svg
+
+  terminal-metrics:
+    name: Generate Terminal Metrics
+    runs-on: ubuntu-latest
+    needs: classic-metrics
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Generate Terminal Metrics
         uses: lowlighter/metrics@latest
@@ -93,13 +115,29 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: OskaraOskar
           template: terminal
-          filename: metrics.terminal.svg
+          filename: dist/metrics.terminal.svg
 
-      - name: Deploy Metrics to Output Branch
+      - name: Upload Terminal Metrics Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: terminal-metrics
+          path: dist/metrics.terminal.svg
+
+  deploy-metrics:
+    name: Deploy All Metrics
+    runs-on: ubuntu-latest
+    needs: [repository-metrics, terminal-metrics]
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+
+      - name: Deploy All Metrics to Output Branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
-          build_dir: .
-          commit_message: "Update GitHub metrics"
+          build_dir: dist
+          commit_message: "Deploy GitHub metrics"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
