--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -14,7 +14,7 @@ jobs:
   generate-snake:
     name: Generate Snake Contribution Graph
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 60
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -31,57 +31,14 @@ jobs:
           name: snake
           path: dist/github-contribution-grid-snake.svg
 
-  metrics-introduction:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Generate Introduction Metrics
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          user: OskaraOskar
-          filename: dist/metrics.introduction.svg
-          template: classic
-          base: ""
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: metrics-introduction
-          path: dist/metrics.introduction.svg
-
-  metrics-activity:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Generate Activity Metrics
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          user: OskaraOskar
-          filename: dist/metrics.activity.svg
-          template: classic
-          base: ""
-          plugin_activity: yes
-          plugin_activity_limit: 5
-          plugin_activity_days: 14
-          plugin_activity_visibility: all
-          plugin_activity_timestamps: yes
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: metrics-activity
-          path: dist/metrics.activity.svg
-
   metrics-calendar:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 60
     steps:
       - name: Generate Calendar Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
           filename: dist/metrics.calendar.svg
           template: classic
@@ -96,18 +53,18 @@ jobs:
 
   metrics-isocalendar:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 60
     steps:
       - name: Generate Isometric Calendar Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
           filename: dist/metrics.isocalendar.svg
           template: classic
           base: ""
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
 
       - uses: actions/upload-artifact@v4
         with:
@@ -116,21 +73,20 @@ jobs:
 
   metrics-skyline:
     runs-on: ubuntu-latest
-    timeout-minutes: 6
+    timeout-minutes: 60
     continue-on-error: true # Skyline is fancy but flaky
     steps:
       - name: Generate Skyline Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
           filename: dist/metrics.skyline.svg
           template: classic
           base: ""
           plugin_skyline: yes
-          plugin_skyline_year: current-year
-          plugin_skyline_frames: 12
-          plugin_skyline_quality: 0.2
+          plugin_skyline_frames: 120
+          plugin_skyline_quality: 0.3
           plugin_skyline_compatibility: yes
 
       - uses: actions/upload-artifact@v4
@@ -140,12 +96,12 @@ jobs:
 
   metrics-repository:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 60
     steps:
       - name: Generate Repository Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
           template: repository
           filename: dist/metrics.repository.svg
@@ -159,35 +115,36 @@ jobs:
           name: metrics-repository
           path: dist/metrics.repository.svg
 
-  metrics-terminal:
+  external-stats:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 15
     steps:
-      - name: Generate Terminal Metrics
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          user: OskaraOskar
-          template: terminal
-          filename: dist/metrics.terminal.svg
+      - name: Create Output Directory
+        run: mkdir -p dist
 
-      - uses: actions/upload-artifact@v4
+      - name: Fetch GitHub Readme Stats SVGs
+        run: |
+          curl -L "https://github-readme-stats.vercel.app/api?username=OskaraOskar&show_icons=true&theme=radical&count_private=true&include_all_commits=true" -o dist/github-readme-stats.svg
+          curl -L "https://github-readme-stats.vercel.app/api/top-langs/?username=OskaraOskar&layout=compact&theme=radical&count_private=true" -o dist/github-top-langs.svg
+          curl -L "https://github-readme-streak-stats.herokuapp.com/?user=OskaraOskar&theme=radical&hide_border=true" -o dist/github-streak-stats.svg
+          curl -L "https://capsule-render.vercel.app/api?text=Welcome%20to%20My%20GitHub!&animation=fadeIn&type=waving&color=gradient&height=200" -o dist/capsule-header.svg
+
+      - name: Upload External Stats
+        uses: actions/upload-artifact@v4
         with:
-          name: metrics-terminal
-          path: dist/metrics.terminal.svg
+          name: external-stats
+          path: dist/*.svg
 
   deploy-assets:
     name: Deploy All Generated Assets
     runs-on: ubuntu-latest
     needs:
       - generate-snake
-      - metrics-introduction
-      - metrics-activity
       - metrics-calendar
       - metrics-isocalendar
       - metrics-skyline
       - metrics-repository
-      - metrics-terminal
+      - external-stats
     steps:
       - name: Download All Artifacts
         uses: actions/download-artifact@v4
