--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -40,11 +40,18 @@ jobs:
         with:
           token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
-          filename: dist/metrics.calendar.svg
+          filename: metrics.calendar.svg
           template: classic
           base: ""
           plugin_calendar: yes
           plugin_calendar_limit: 1
+          output_action: none
+
+      - name: Create output directory
+        run: mkdir -p dist
+
+      - name: Move generated file
+        run: mv metrics.calendar.svg dist/
 
       - uses: actions/upload-artifact@v4
         with:
@@ -60,11 +67,18 @@ jobs:
         with:
           token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
-          filename: dist/metrics.isocalendar.svg
+          filename: metrics.isocalendar.svg
           template: classic
           base: ""
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          output_action: none
+
+      - name: Create output directory
+        run: mkdir -p dist
+
+      - name: Move generated file
+        run: mv metrics.isocalendar.svg dist/
 
       - uses: actions/upload-artifact@v4
         with:
@@ -81,34 +95,42 @@ jobs:
         with:
           token: ${{ secrets.GH_STATS_TOKEN }}
           user: OskaraOskar
-          filename: dist/metrics.skyline.svg
+          filename: metrics.skyline.svg
           template: classic
           base: ""
           plugin_skyline: yes
           plugin_skyline_frames: 120
           plugin_skyline_quality: 0.3
           plugin_skyline_compatibility: yes
+          output_action: none
+
+      - name: Create output directory
+        run: mkdir -p dist
+
+      - name: Move generated file
+        run: mv metrics.skyline.svg dist/
 
       - uses: actions/upload-artifact@v4
         with:
           name: metrics-skyline
           path: dist/metrics.skyline.svg
 
-  metrics-repository:
+  metrics-user:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - name: Generate Repository Metrics
+      - name: Generate User Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GH_STATS_TOKEN }}
-          user: OskaraOskar
-          template: repository
-          filename: dist/metrics.repository.svg
-          query: |
-            {
-              "repository": "OskaraOskar"
-            }
+          filename: metrics.repository.svg
+          output_action: none
+
+      - name: Create output directory
+        run: mkdir -p dist
+
+      - name: Move generated file
+        run: mv metrics.repository.svg dist/
 
       - uses: actions/upload-artifact@v4
         with:
@@ -142,7 +164,7 @@ jobs:
       - metrics-calendar
       - metrics-isocalendar
       - metrics-skyline
-      - metrics-repository
+      - metrics-user
       - external-stats
     steps:
       - name: Download All Artifacts
